--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "underscore": "~1.5.2",
-    "jade": "~0.35.0"
+    "jade": "~0.35.0",
+    "coffee-script": "~1.6.3"
   }
 }
