--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "underscore": "~1.5.2",
     "jade": "~0.35.0",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "less": "~1.4.2"
   }
 }
